@@ -1,16 +1,16 @@
 <menutimers x="0" y="0" width="100%" height="100%" fadetime="0" scaletvx="1%" scaletvy="58%" scaletvwidth="40%" scaletvheight="40%">	
 	<background>
 		<area x="0" y="0" width="100%" height="100%" layer="1">
-			<drawimage condition="not{{brightBackground}" x="0" width="{areawidth}" height="{areaheight}" imagetype="skinpart" path="gradientPNG" />
-			<drawimage condition="{{brightBackground}" x="0" width="{areawidth}" height="{areaheight}" imagetype="skinpart" path="gradientPNGBright" />
-			<drawrectangle  x="1%" y="59%" width="39%" height="39%" color="{clrTransparent}" />
+			<drawimage condition="not{brightBackground}" x="0" width="{areawidth}" height="{areaheight}" imagetype="skinpart" path="gradientPNG" />
+			<drawimage condition="{brightBackground}" x="0" width="{areawidth}" height="{areaheight}" imagetype="skinpart" path="gradientPNGBright" />
+			<drawrectangle x="1%" y="59%" width="39%" height="39%" color="{clrTransparent}" />
 		</area>
 		<area x="0" y="0" width="100%" height="100%" layer="2">
-			<drawimage  x="0" width="{areawidth}" height="{areaheight}" imagetype="skinpart" path="shadowsMenuTVLB" />           
+			<drawimage x="0" width="{areawidth}" height="{areaheight}" imagetype="skinpart" path="shadowsMenuTVLB" />
 		</area>
 		<area x="0" y="0" width="100%" height="11%" layer="2">
-			<drawimage  x="0" width="{areawidth}*0.972" height="{areaheight}*0.972" imagetype="skinpart" path="gradientHeader" />           
-		</area>      
+			<drawimage x="0" width="{areawidth}*0.972" height="{areaheight}*0.972" imagetype="skinpart" path="gradientHeader" />
+		</area>
 	</background>
 
 	<header condition="{showDiscUsage}">
@@ -22,7 +22,7 @@
 			<drawimage x="0" width="{areawidth}" height="{areaheight}/100*{freepercent}" imagetype="skinpart" path="discSpecHide" />
 		</area>
 		<area x="0" y="6%" width="5%" height="4%" layer="4">
-			<drawtext x="0" y="25%"  align="center" font="{light}" fontsize="75%" color="{clrLightGray}" text="{usedpercent}%" />
+			<drawtext x="0" y="25%" align="center" font="{light}" fontsize="75%" color="{clrLightGray}" text="{usedpercent}%" />
 		</area>
 		<area x="6%" y="2%" width="60%" height="7%" layer="4">
 			<drawtext x="1%" valign="center" font="{light}" fontsize="80%" color="{clrLightGray}" text="{title}" />
@@ -31,7 +31,7 @@
 
 	<menuitems x="0" y="14%" orientation="vertical" width="100%" height="75%" align="center" numlistelements="{numShortSubmenuitems}"> 
 		<listelement>
-			<area  condition="not{showTimerStopTime}" x="50%" width="45%" layer="3">
+			<area condition="not{showTimerStopTime}" x="50%" width="45%" layer="3">
 				<drawimage condition="not{current}" x="4%" y="0" width="{areawidth}*0.96" height="{areaheight}" imagetype="skinpart" path="buttonRecMenuTVG"/>
 				<drawimage condition="{current}++eq({coloredButtons}, 0)" x="4%" y="0" width="{areawidth}*0.96" height="{areaheight}" imagetype="skinpart" path="buttonRecMenuActiveTVG"/>
 				<drawimage condition="{current}++eq({coloredButtons}, 2)" x="4%" y="0"	width="{areawidth}*0.96" height="{areaheight}" imagetype="skinpart" path="buttonRecMenuActiveTVG_Gradient"/>
@@ -44,18 +44,18 @@
 				<drawtext x="0" width="100%" valign="center" font="{light}" fontsize="60%" color="{clrLightGray}" text="{printf('%02d.%02d', day, month)}."/>
 			</area>
 			<area x="48%" width="5%" layer="3">
-				<drawtext x="5%" width="100%" valign="center"  font="{light}" fontsize="60%" color="{clrLightGray}" text="{timerstart}"/>
+				<drawtext x="5%" width="100%" valign="center" font="{light}" fontsize="60%" color="{clrLightGray}" text="{timerstart}"/>
 			</area>
 			<area condition="not{showTimerStopTime}" x="53%" width="2%" layer="4">
 				<drawimage condition="{flagrecording}" x="0" y="0" width="{areawidth}" height="{areaheight}" imagetype="skinpart" path="redMarker" />
 				<drawimage condition="{flagactive}++not{flagrecording}" x="0" y="0" width="{areawidth}" height="{areaheight}" imagetype="skinpart" path="greenMarker" />
 				<drawimage condition="not{flagactive}" x="0" y="0" width="{areawidth}" height="{areaheight}" imagetype="skinpart" path="yellowMarker" />
-			</area>                                	
+			</area>
 			<areascroll condition="not{showTimerStopTime}" scrollelement="timertext" mode="forthandback" orientation="horizontal" delay="1000" scrollspeed="medium" x="55%" width="38%" layer="3">
 				<drawtext name="timertext" x="0" valign="center" font="{light}" fontsize="70%" color="{clrLightGray}" text="{title}"/>
 			</areascroll>
  
-			<area  condition="{showTimerStopTime}" x="54%" width="41%" layer="3">
+			<area condition="{showTimerStopTime}" x="54%" width="41%" layer="3">
 				<drawimage condition="not{current}" x="5%" y="0" width="{areawidth}*0.95" height="{areaheight}" imagetype="skinpart" path="buttonRecMenuTVG"/>
 				<drawimage condition="{current}++eq({coloredButtons}, 0)" x="5%" y="0" width="{areawidth}*0.95" height="{areaheight}" imagetype="skinpart" path="buttonRecMenuActiveTVG"/>
 				<drawimage condition="{current}++eq({coloredButtons}, 1)" x="5%" y="0" width="{areawidth}*0.95" height="{areaheight}" imagetype="skinpart" path="buttonRecMenuActiveTVG_Color"/>
@@ -92,7 +92,7 @@
 
 	<scrollbar>
 		<area condition="lt({height},1000)" x="95%" y="15%" width="5%" height="75%" layer="3">
-			 <drawimage   x="0" y="0" width="{areawidth}" height="{areaheight}" imagetype="skinpart" path="shadowScrollSub" />
+			 <drawimage x="0" y="0" width="{areawidth}" height="{areaheight}" imagetype="skinpart" path="shadowScrollSub" />
 			 <drawimage x="15%" y="{areaheight} * {offset} / 1000" width="{areawidth}*0.1" height="{areaheight} * {height} / 1000" imagetype="skinpart" path="scrollBar" />
 		</area>
 	</scrollbar>
